# ProphetAi

./: .env.example  .gitignore  .vercelignore  README.md  docker-compose.yml  manage.py  package-lock.json  requirements.txt  vercel.json
.claude/: settings.local.json
backend/: .env.example  Dockerfile  manage.py  pyproject.toml  requirements.txt
backend/properties/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/properties/migrations/: 0001_initial.py  0002_alter_property_zip_code.py  0003_alter_property_address.py  0004_add_listing_params_phone_coords.py  __init__.py
backend/properties/tests/: __init__.py  test_models.py  test_services.py  test_views.py
backend/prophetai/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/services/: __init__.py  gemini_service.py  kg_scraper.py  pricing_service.py
core/: settings.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analysis/: page.tsx
frontend/src/app/analysis/[id]/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: InvestmentScoreGauge.tsx  MarketPosition.tsx  PhotoInsightCard.tsx  PriceChart.tsx  PropertyCard.tsx  RedFlagCard.tsx
frontend/src/lib/: api.ts  demo-data.ts
